--- a/Abhiveda.html
+++ b/Abhiveda.html
@@ -4,7 +4,7 @@
         <title>
             About Abhiveda Gowrigari
         </title>
-        <link rel = "stylesheet" type="text/css" href = "style.css"/>
+        <link rel = "stylesheet" type="text/css" href = "Abhiveda.css"/>
     </head>
     <body>
         <img src="Abhiveda_Sidu.jpg" width=200 height=160>
